WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170400
Mutex may be freed too late in NetworkCache::Storage::traverse
https://bugs.webkit.org/show_bug.cgi?id=170400
Summary
Mutex may be freed too late in NetworkCache::Storage::traverse
Antti Koivisto
Reported
2017-04-03 05:42:39 PDT
This is racy.
Attachments
patch
(2.03 KB, patch)
2017-04-03 05:56 PDT
,
Antti Koivisto
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-04-03 05:47:14 PDT
<
rdar://problem/30515865
>
Antti Koivisto
Comment 2
2017-04-03 05:56:16 PDT
Created
attachment 306074
[details]
patch
Antti Koivisto
Comment 3
2017-04-03 06:09:40 PDT
https://trac.webkit.org/r214786
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug