Mutex may be freed too late in NetworkCache::Storage::traverse https://bugs.webkit.org/show_bug.cgi?id=170400 <rdar://problem/30515865>

Reviewed by Carlos Garcia Campos and Andreas Kling.

Fix a race.

* NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::Storage::traverse):

    Ensure the mutex is not accessed after we dispatch to the main thread.
    The main thread call deletes the owning TraverseOperation.



Canonical link: https://commits.webkit.org/187316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214786 268f45cc-cd09-0410-ab3c-d52691b4dbfc